--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "version": "3.0.141",
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
+    "currency.js": "^1.2.2",
     "gatsby": "2.18.3",
-    "gatsby-plugin-manifest": "2.2.29",
-    "gatsby-plugin-offline": "3.0.23",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-manifest": "^2.2.29",
+    "gatsby-plugin-offline": "^3.0.23",
     "gatsby-plugin-postcss": "2.1.15",
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "3.1.15",
+    "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-source-directus7": "^0.8.1",
+    "gatsby-source-filesystem": "^2.1.39",
+    "gatsby-transformer-sharp": "^2.3.6",
     "graphql": "14.5.8",
     "prop-types": "15.7.2",
     "react": "16.12.0",
